...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.inventory.AddInventoryFragment">

        <EditText
            android:id="@+id/editTextDateOfPurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Date of Purchase or Acquisition"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Description"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Make"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Model"
            android:inputType="text" />

...
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Item Serial Number (Optional)"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextEstimatedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Estimated Value"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="Comment"
            android:inputType="textMultiLine" />

...
                android:layout_height="170dp"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>

    </ScrollView>
    <Button
    android:id="@+id/button_ok"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="OK" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel" />
...
