...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="45dp"
        android:text="@string/title_filter"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sortby_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/title_sort"
...
            android:textStyle="bold"
            android:background="#EFEFEF"
            android:textColor="#000000"
            app:layout_constraintTop_toBottomOf="@+id/recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/delete_button"/>



    <Button
        android:id="@+id/tag_button"
        android:layout_width="wrap_content"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/title_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_button"
            app:layout_constraintStart_toEndOf="@+id/tag_button"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
