...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_inventory" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@android:drawable/ic_menu_camera"
...
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_tag"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/title_tag_tab" />

</menu>
